syntax = "proto3";
import "wind_speed.proto";
import "precipitation_chance.proto";
import "pressure.proto";
import "uv_index.proto";
import "hourlyTemperature.proto";
import "temperature_unit.proto";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "DayForecastProto";

message DayForecastProto {
  int32 temperature = 1;
  int32 apparentTemp = 2;
  TemperatureUnitProto temperatureUnit = 3;
  int32 imgIdWeatherCode = 4;
  int32 weatherCode = 5;
  string date = 6;
  string sunrise = 7;
  string sunset = 8;
  WindSpeedProto windSpeed = 9;
  PrecipitationChanceProto precipitationChance = 10;
  PressureProto pressure = 11;
  UvIndexProto uvIndex = 12;
  repeated HourlyTemperatureProto hourlyTempForecast = 13;
  repeated PrecipitationChanceProto precipitationChanceForecast = 14;
}
