syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "PrecipitationChanceProto";

message PrecipitationChanceProto {
  string time = 1;
  int32 currentPrecipitationChance = 2;
  string percent = 3;
  string precipitationChanceDiff = 4;
  int32 imgIdPrecipitationChance = 5;
}
